--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "console": "geth --datadir ./geth-test/ --networkid 98 console --rpc.enabledeprecatedpersonal",
-    "solc": "solcjs --bin contracts/helloworld.sol",
-    "abi": "solcjs --abi contracts/helloworld.sol"
+    "solc:helloworld": "solcjs --bin contracts/helloworld.sol",
+    "abi:helloworld": "solcjs --abi contracts/helloworld.sol",
+    "solc:voting": "solcjs --bin contracts/voting.sol",
+    "abi:voting": "solcjs --abi contracts/voting.sol"
   },
   "keywords": [],
   "author": "",
